# upbit-trading-bot

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/upbit_bot/: config.py  main.py  strategy.py  upbit_api.py
