[tool.poetry]
name = "upbit-trading-bot"
version = "0.1.0"
description = "Upbit cryptocurrency trading bot with momentum and mean reversion strategies"
authors = ["ksj3421 <soojung3421@gmail.com>"]
readme = "README.md"
packages = [{include = "upbit_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.4"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
websockets = "^12.0"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"